trunk/Archive2/c3/933fa7ce2fc770/output
main.cpp: In function 'int main()':
main.cpp:2:42: error: 'printf' was not declared in this scope
     printf("Hello World!!!!!!!!!!!!!!!!!");
                                          ^
